Footer cta, when hidden fix missing space.

--- a/wp-content/themes/sayenko-erickson/assets/scss/structure/_widgets.scss
+++ b/wp-content/themes/sayenko-erickson/assets/scss/structure/_widgets.scss
@@ -1,5 +1,9 @@
 // Widgets
 
+.footer-cta-none .footer-widgets {
+    margin-top: rem-calc( 60 );   
+}
+
 .footer-widgets {
     
     background-color: #faf6f6;
